--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -10,17 +10,8 @@
     <Filter Include="game\combat\micro">
       <UniqueIdentifier>{e5971e4e-7c6b-4f4e-9fbe-4a5247b3cf51}</UniqueIdentifier>
     </Filter>
-    <Filter Include="game\util">
-      <UniqueIdentifier>{222db7e1-f821-4383-986a-83267e040564}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="game\util\map">
-      <UniqueIdentifier>{8ac87511-27d4-42ea-8402-6491d9206435}</UniqueIdentifier>
-    </Filter>
     <Filter Include="common">
       <UniqueIdentifier>{849d54bf-a76a-4425-8399-099fbe0360c4}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="game\combat\squad">
-      <UniqueIdentifier>{32554737-6cf9-47c8-87c9-6db0b6ffcc51}</UniqueIdentifier>
     </Filter>
     <Filter Include="util">
       <UniqueIdentifier>{59599488-4576-44ab-8522-7d65a6425e15}</UniqueIdentifier>
@@ -31,25 +22,13 @@
     <Filter Include="game\economy">
       <UniqueIdentifier>{a78e9ab8-4a81-4640-b6eb-f1eed3e4b1af}</UniqueIdentifier>
     </Filter>
-    <Filter Include="game\economy\buildorders">
-      <UniqueIdentifier>{0984e4fa-2fbf-40e9-8c0d-304344df9718}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Source\CombatCommander.cpp">
       <Filter>game\combat</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\MapTools.cpp">
-      <Filter>game\util\map</Filter>
-    </ClCompile>
     <ClCompile Include="..\Source\GameCommander.cpp">
       <Filter>game</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\Squad.cpp">
-      <Filter>game\combat\squad</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\SquadData.cpp">
-      <Filter>game\combat\squad</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\CombatSimulation.cpp">
       <Filter>game\combat</Filter>
@@ -87,29 +66,8 @@
     <ClCompile Include="..\source\TransportManager.cpp">
       <Filter>game\combat\micro</Filter>
     </ClCompile>
-    <ClCompile Include="..\source\BuildOrderQueue.cpp">
-      <Filter>game\economy\buildorders</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\BOSSManager.cpp">
-      <Filter>game\economy\buildorders</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\BuildOrder.cpp">
-      <Filter>game\economy\buildorders</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\MetaType.cpp">
       <Filter>game\economy</Filter>
-    </ClCompile>
-    <ClCompile Include="..\source\TimerManager.cpp">
-      <Filter>game\util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\InformationManager.cpp">
-      <Filter>game\util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\StrategyManager.cpp">
-      <Filter>game\util</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Source\UnitData.cpp">
-      <Filter>game\util</Filter>
     </ClCompile>
     <ClCompile Include="..\Source\Config.cpp">
       <Filter>common</Filter>
@@ -146,9 +104,6 @@
     <ClCompile Include="..\Source\BaseLocationManager.cpp">
       <Filter>util</Filter>
     </ClCompile>
-    <ClCompile Include="..\Source\DistanceMap.cpp">
-      <Filter>game\util\map</Filter>
-    </ClCompile>
     <ClCompile Include="..\source\ScoutManager.cpp">
       <Filter>game\scout</Filter>
     </ClCompile>
@@ -159,25 +114,46 @@
     <ClCompile Include="..\source\BuildingPlacerManager.cpp">
       <Filter>game\economy</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\Squad.cpp">
+      <Filter>game\combat</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\SquadData.cpp">
+      <Filter>game\combat</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\BOSSManager.cpp">
+      <Filter>game\economy</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BuildOrder.cpp">
+      <Filter>game\economy</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\BuildOrderQueue.cpp">
+      <Filter>game\economy</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\DistanceMap.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\InformationManager.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\MapTools.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\StrategyManager.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\TimerManager.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\UnitData.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\CombatCommander.h">
       <Filter>game\combat</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\MapTools.h">
-      <Filter>game\util\map</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\GameCommander.h">
       <Filter>game</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\SquadOrder.h">
-      <Filter>game\combat\squad</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\Squad.h">
-      <Filter>game\combat\squad</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\SquadData.h">
-      <Filter>game\combat\squad</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Common.h">
       <Filter>common</Filter>
@@ -215,29 +191,8 @@
     <ClInclude Include="..\source\RangedManager.h">
       <Filter>game\combat\micro</Filter>
     </ClInclude>
-    <ClInclude Include="..\source\BuildOrderQueue.h">
-      <Filter>game\economy\buildorders</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\BOSSManager.h">
-      <Filter>game\economy\buildorders</Filter>
-    </ClInclude>
-    <ClInclude Include="..\source\BuildOrder.h">
-      <Filter>game\economy\buildorders</Filter>
-    </ClInclude>
     <ClInclude Include="..\source\MetaType.h">
       <Filter>game\economy</Filter>
-    </ClInclude>
-    <ClInclude Include="..\source\TimerManager.h">
-      <Filter>game\util</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\InformationManager.h">
-      <Filter>game\util</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\StrategyManager.h">
-      <Filter>game\util</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\UnitData.h">
-      <Filter>game\util</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Config.h">
       <Filter>common</Filter>
@@ -266,9 +221,6 @@
     <ClInclude Include="..\Source\Logger.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\GameHistory.hpp">
-      <Filter>game\util</Filter>
-    </ClInclude>
     <ClInclude Include="..\Source\UAlbertaBotModule.h" />
     <ClInclude Include="..\Source\BaseLocation.h">
       <Filter>util</Filter>
@@ -276,17 +228,8 @@
     <ClInclude Include="..\Source\BaseLocationManager.h">
       <Filter>util</Filter>
     </ClInclude>
-    <ClInclude Include="..\Source\Grid.hpp">
-      <Filter>game\util</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\DistanceMap.h">
-      <Filter>game\util\map</Filter>
-    </ClInclude>
     <ClInclude Include="..\source\ScoutManager.h">
       <Filter>game\scout</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Source\Profiler.hpp">
-      <Filter>game\util</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\Global.h" />
     <ClInclude Include="..\Source\BuildingData.h">
@@ -294,6 +237,51 @@
     </ClInclude>
     <ClInclude Include="..\source\BuildingPlacerManager.h">
       <Filter>game\economy</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Squad.h">
+      <Filter>game\combat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\SquadData.h">
+      <Filter>game\combat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\SquadOrder.h">
+      <Filter>game\combat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\BOSSManager.h">
+      <Filter>game\economy</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildOrder.h">
+      <Filter>game\economy</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\BuildOrderQueue.h">
+      <Filter>game\economy</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\DistanceMap.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\GameHistory.hpp">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Grid.hpp">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\InformationManager.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\MapTools.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\Profiler.hpp">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\StrategyManager.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\source\TimerManager.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\UnitData.h">
+      <Filter>util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
